- Upgraded WordPress to version 4.4.3 (Trello #1176)
- Reactor: Fixed bug with right column size if only right column is enabled (Trello #1185)
- Reactor: Fixed bug with icon in last card (Trello #1187)
- Reactor: Fixed bug getting multiple categories posts from URL (Trello #1142)
- Reactor: Minor improvements in CSS
- Reactor: Added three color palettes (GitHub #275)
- Disabled asynchronous default cron because there's an hourly system cron (Trello #1112)
- xtec-ldap-login: Any existing user whose e-mail is XTEC, will always log in through LDAP if it is activated (Trello #1105)
- mu-common: Avoid delete page_on_front because frontpage is not shown if it doesnt exist (Trello #1178)
- mu-common: Replace template if front-page page is not using correct one (Trello #1178)
- xtec-mailer: Displayed reply-to parameter for admins to allow them to change it (Trello #1206)
- xtec-mailer: Taken Reply-to from headers if specified (Trello #1206)
- enllacos-educatius: Changed xtec.cat to xtec.gencat.cat (Trello #1207)
- Added embed and iframe support in kses
- buddypress-activity-plus: Upgraded from version 1.6.2 to 1.6.4 (Trello #1039)
- buddypress + invite-anyone: Reviewed catalan translation (Trello #1209)
- Hidden options in Settings menu (Trello #1219)
- WSL: Upgraded to version 2.3.0 (Trello #1035)
- Fixed bug with searching members or groups box (Trello #1216)
- Grup-Classe: Added Email subscribers integration to Grup-Classe widget (GitHub #193)
- Email Subscribers: Improved widget design (GitHub #193)
- Reactor: Added description link (Trello #1218)
- intraweb-importer: Copy and update creation date of content. Import again deleted content (Trello #1236)
- import-users-from-csv-with-meta: Upgraded to version 1.8.7.2 (Trello #1043)
- widget-visibility-without-jetpack: Fixed button "Visibility" not showing in Customizer under WP 4.4 (Trello #1176)


Changes 16.03.30
---------------------------------------------------------------------------------------