@@ -11,9 +11,10 @@ Changes in progress
 - Reactor: Fixed bug getting multiple categories posts from URL (Trello #1142)
 - Reactor: Minor improvements in CSS
 - Reactor: Added three color palettes (GitHub #275)
+- reactor-serveis-educatius: Options of depth 0 in menu don't break in two lines if they're long
 - Disabled asynchronous default cron because there's an hourly system cron (Trello #1112)
 - xtec-ldap-login: Any existing user whose e-mail is XTEC, will always log in through LDAP if it is activated (Trello #1105)
-- mu-common: Avoid delete page_on_front because frontpage is not shown if it doesnt exist (Trello #1178)
+- mu-common: Avoid delete page_on_front because front page is not shown if it doesn't exist (Trello #1178)
 - mu-common: Replace template if front-page page is not using correct one (Trello #1178)
 - xtec-mailer: Displayed reply-to parameter for admins to allow them to change it (Trello #1206)
 - xtec-mailer: Taken Reply-to from headers if specified (Trello #1206)
@@ -37,7 +38,7 @@ Changes 16.03.30
 - Reactor: Fixed bug with right column size (Trello #1185)
 - Reactor: Fixed bug with menu icons with 2-lines text (Trello #1184)
 - Reactor: Fixed bug when resizing cards (Trello #1187)
-- XTEC lib: Added suport for extension Email Subscriber in service activation and in URL replace (Trello #1174)
+- XTEC lib: Added support for extension Email Subscriber in service activation and in URL replace (Trello #1174)
 - Theme reactor-serveis-educatius: Fixed menu options set to _blank not opening in new window (Trello #1175)
 - Email Subscribers: Changed default group from Public to Portada (Trello #833)
 
